# crafty-service

./: .env  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  dev.bat  docker-compose.yaml  pyproject.toml  tasks.py
crafty/: config.py  constants.py  decorators.py  exceptions.py  main.py  middleware.py
crafty/crud/: favorite.py  product.py  review.py  subscription.py  tag.py  user.py
crafty/db/: database.py  session.py
crafty/db/alembic/: env.py
crafty/db/alembic/versions/: 01a0d467414e_initial_migration.py  7651152492e3_initial_migration.py  f09bf08f1fc4_add_unique_constraint_to_reviews_table.py
crafty/db/models/: favorite.py  item.py  join_tables.py  product.py  review.py  subscription.py  tag.py  user.py
crafty/routers/: favorite.py  product.py  review.py  subscription.py  tag.py  user.py
crafty/schemas/: favorite.py  product.py  review.py  subscription.py  tag.py  user.py
