[tool.poetry]
name = "crafty"
version = "0.1.0"
description = ""
authors = ["Marija Matijevic <marija.matijevi@gmail.com>", "Valentin Vareskic <valentin.vareskic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
sqlalchemy-utils = "^0.41.2"
pydantic = "^2.8.2"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
mypy = "^1.11.0"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crafty = "crafty.main:main"
